2008-06-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.23.0.

2008-06-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* Makefile.am:
	Require intltool 0.40.

2008-06-05  Ross Burton  <ross@burtonini.com>

	* libjuicer/sj-util.[ch]:
	* src/sj-extracting.c:
	Update to the latest make_directory_with_parents from bugzilla.

2008-06-05  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sj-main.c:
	* src/sound-juicer.h:
	* src/sj-play.c:
	* src/sj-extracting.c:
	* src/sj-prefs.c:
	* libjuicer/sj-extractor.c:
	* libjuicer/sj-util.c:
	* libjuicer/sj-extractor.h:
	* libjuicer/sj-util.h:
	Port to GIO.  Thanks to Michael Terry for the bulk of this
	work! (#514673).

2008-05-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in.in:
	Specify that URLs can be passed when starting SJ
	
	* src/sj-main.c:
	Munge any passed URLs into device paths.

	#530423, thanks Bastien "Big Baz" Nocera.

2008-05-14  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	* src/sj-main.c:
	Fix display problems with the notification by putting it inside an
	event box (#512231, thanks Pekka Vuorela)

2008-04-17  Luca Cavalli  <lcavalli@svn.gnome.org>

	* src/Makefile.am:
	* src/egg-play-preview.[ch]:
	Add an audio preview widget.
	* src/sj-extracting.c: (confirm_overwrite_existing_file):
	Allow the user to listen to the track before choose to skip or
	overwrite it (#161315).

2008-04-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Add AM_PROG_CC_C_O.

2008-04-13  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Bump GTK+ dependency to 2.12.

	* src/Makefile.am:
	* src/bacon-volume.[ch]:
	* po/POTFILES.in:
	Remove BaconVolume widget.

	* data/sound-juicer.glade:
	* src/sj-main.c:
	* src/sj-play.[ch]:
	Use GtkVolumeButton (#518753, thanks Michael Terry)

2008-04-13  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Fix crash when no profile is selected (#364666, thanks Matthew Martin).
