@@ -73,6 +73,7 @@
         %aA -- album artist (lowercase)
         %as -- album artist (sortable)
         %aS -- album artist (sortable lowercase)
+        %ay -- album year
         %tt -- track title
         %tT -- track title (lowercase)
         %ta -- track artist
