@@ -1,3 +1,10 @@
+2008-06-17  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
+	* data/sound-juicer.schemas.in:
+	Add %ay, album year.  Based on a patch by Juan F. Giménez
+	Silva (#522909).
+
 2008-06-05  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
